--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "template-repository",
+  "name": "daterra-api",
   "version": "1.0.0",
   "license": "GNU AGPLv3",
   "scripts": {
+    "start": "start npm run watch && start nodemon --exec \"npm run serve\" ./build/index.js",
+    "watch": "tsc --watch",
+    "build": "tsc",
+    "serve": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
   "dependencies": {
-    "@types/node": "12.7.5",
+    "@types/express": "^4.17.1",
+    "@types/express-graphql": "^0.9.0",
+    "@types/node": "^12.7.5",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.5.8",
     "lint-staged": "^9.2.5",
+    "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
-    "typescript": "3.6.3"
+    "typescript": "^3.6.3"
   },
   "lint-staged": {
     "*.(tsx?|css|json)": [
@@ -20,11 +30,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/da-terra/template-repository.git"
+    "url": "git+https://github.com/da-terra/daterra-api.git"
   },
   "author": "Leroy Korterink <s1106266@student.windesheim.nl> (https://leroy.dev)",
   "bugs": {
-    "url": "https://github.com/da-terra/template-repository/issues"
+    "url": "https://github.com/da-terra/daterra-api/issues"
   },
-  "homepage": "https://github.com/da-terra/template-repository#readme"
+  "homepage": "https://github.com/da-terra/daterra-api#readme"
 }
