--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "license": "GNU AGPLv3",
   "scripts": {
-    "start": "start npm run watch && start nodemon --exec \"npm run serve\" ./build/index.js",
-    "watch": "tsc --watch",
+    "init": "tsc -p ./tsconfig.scripts.json",
     "build": "tsc",
-    "serve": "node ./build/index.js",
+    "start": "node ./build/scripts/start.js",
+    "serve": "node ./build/app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
-    "@types/node": "^12.7.5",
+    "@types/node": "^12.12.5",
+    "chalk": "^2.4.2",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "lint-staged": "^9.2.5",
-    "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "typescript": "^3.6.3"
   },
   "lint-staged": {
-    "*.(tsx?|css|json)": [
+    "*.(tsx?|json)": [
       "prettier --write",
       "git add"
     ]
