--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
     "@types/node": "^12.12.5",
+    "@types/rimraf": "^2.0.3",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
     "typescript": "^3.6.3"
   },
   "lint-staged": {
