--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "private": true,
   "dependencies": {
+    "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
     "@types/node": "^12.12.5",
     "@types/rimraf": "^2.0.3",
     "chalk": "^2.4.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
