--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
+    "@types/http-errors": "^1.6.2",
     "@types/node": "^12.12.5",
     "@types/rimraf": "^2.0.3",
     "chalk": "^2.4.2",
@@ -24,6 +25,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "http-errors": "^1.7.3",
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
