--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
     "@types/http-errors": "^1.6.2",
+    "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.5",
     "@types/rimraf": "^2.0.3",
     "chalk": "^2.4.2",
@@ -28,6 +29,7 @@
     "http-errors": "^1.7.3",
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
+    "mongoose": "^5.7.11",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "typescript": "^3.6.3"
