--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "license": "GNU AGPLv3",
   "scripts": {
-    "init": "tsc -p ./tsconfig.scripts.json",
-    "build": "tsc -p ./tsconfig.json",
-    "start": "node ./build/scripts/start.js",
-    "serve": "node ./build/app/index.js",
+    "start": "nodemon --exec babel-node src/index.ts --extensions \".ts\"",
+    "build": "babel src --extensions \".ts\" --out-dir build",
+    "serve": "node build/index.js",
     "prettier": "prettier --write \"./**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
@@ -19,10 +23,12 @@
     "@types/http-errors": "^1.6.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.5",
-    "@types/rimraf": "^2.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-macros": "^2.7.1",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
@@ -30,8 +36,8 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
     "mongoose": "^5.7.11",
+    "nodemon": "^2.0.1",
     "prettier": "^1.18.2",
-    "rimraf": "^3.0.0",
     "typescript": "^3.6.3"
   },
   "lint-staged": {
