Use apollo server in favor of express-graphql

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "module": "none",
     "moduleResolution": "node",
+    "noImplicitAny": true,
     "outDir": "./build/app"
   },
   "include": ["src/**/*"]
