--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/federation": "^0.11.2",
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/node": "^7.7.4",
@@ -23,6 +24,9 @@
     "@types/http-errors": "^1.6.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.5",
+    "apollo-datasource": "^0.6.3",
+    "apollo-server": "^2.9.12",
+    "apollo-server-express": "^2.9.12",
     "babel-loader": "^8.0.6",
     "babel-plugin-macros": "^2.7.1",
     "chalk": "^2.4.2",
@@ -30,8 +34,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "graphql.macro": "^1.4.2",
     "http-errors": "^1.7.3",
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
