--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "http-errors": "^1.7.3",
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
+    "mongodb": "^3.3.5",
     "mongoose": "^5.7.11",
     "nodemon": "^2.0.1",
     "prettier": "^1.18.2",
