--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/express-graphql": "^0.9.0",
+    "@types/helmet": "0.0.45",
     "@types/http-errors": "^1.6.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.5",
     "apollo-datasource": "^0.6.3",
     "apollo-server": "^2.9.12",
-    "apollo-server-express": "^2.9.12",
+    "apollo-server-express": "^2.9.13",
     "babel-loader": "^8.0.6",
     "babel-plugin-macros": "^2.7.1",
     "chalk": "^2.4.2",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql.macro": "^1.4.2",
+    "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "husky": "^3.0.9",
     "lint-staged": "^9.2.5",
