--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
+    "@sendgrid/mail": "^6.4.0",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
