--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemon": "^2.0.1",
     "prettier": "^1.18.2",
     "send": "^0.17.1",
+    "serve-static": "^1.14.1",
     "typescript": "^3.6.3"
   },
   "lint-staged": {
@@ -58,11 +59,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/da-terra/daterra-api.git"
+    "url": "git+https://github.com/studata-platform/studata-api.git"
   },
   "author": "Leroy Korterink <s1106266@student.windesheim.nl> (https://leroy.dev)",
   "bugs": {
-    "url": "https://github.com/da-terra/daterra-api/issues"
+    "url": "https://github.com/studata-platform/studata-api/issues"
   },
-  "homepage": "https://github.com/da-terra/daterra-api#readme"
+  "homepage": "https://github.com/studata-platform/studata-api#readme"
 }
