--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "GNU AGPLv3",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.ts --extensions \".ts\"",
+    "start": "nodemon --inspect --exec babel-node src/index.ts --extensions \".ts\"",
     "build": "babel src --extensions \".ts\" --out-dir build",
     "serve": "node build/index.js",
     "prettier": "prettier --write \"./**/*.ts\"",
@@ -15,40 +15,58 @@
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/preset-env": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.7",
+    "@data-science-platform/shared": "github:studata-platform/shared",
     "@sendgrid/mail": "^6.4.0",
+    "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
+    "@types/connect-mongo": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
-    "@types/express-graphql": "^0.9.0",
+    "@types/express-session": "^1.15.16",
     "@types/helmet": "0.0.45",
     "@types/http-errors": "^1.6.2",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.5",
+    "@types/passport": "^1.0.2",
+    "@types/passport-google-oauth20": "^2.0.3",
     "@types/send": "^0.14.5",
+    "@types/uuid": "^3.4.6",
     "apollo-datasource": "^0.6.3",
-    "apollo-server": "^2.9.12",
-    "apollo-server-express": "^2.9.13",
-    "babel-loader": "^8.0.6",
+    "apollo-server": "^2.9.15",
+    "apollo-server-express": "^2.9.15",
     "babel-plugin-macros": "^2.7.1",
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "graphql": "^14.5.8",
+    "graphql-upload": "^9.0.0",
     "graphql.macro": "^1.4.2",
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "husky": "^3.0.9",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^9.2.5",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.11",
     "nodemon": "^2.0.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "prettier": "^1.18.2",
     "send": "^0.17.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.3",
+    "uuid": "^3.3.3"
   },
   "lint-staged": {
     "*.(tsx?|json)": [
