--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/send": "^0.14.5",
     "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "apollo-datasource": "^0.6.3",
     "apollo-server": "^2.9.15",
     "apollo-server-express": "^2.9.15",
@@ -48,6 +50,8 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "graphql": "^14.5.8",
